# tts_util

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  EXAMPLES.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
src/tts_util/: __init__.py  cli.py  macro_util.py
src/tts_util/adapters/: __init__.py  pynput_hotkeys.py  pynput_text_source.py  pyttsx3_speech.py  tkinter_gui_controller.py
src/tts_util/core/: __init__.py  constants.py  ports.py  speech_controller.py  text_processor.py
tests/: conftest.py  test_cli.py  test_macro_util.py  test_pynput_hotkeys.py  test_pynput_text_source.py  test_pyttsx3_speech.py  test_speech_controller.py  test_text_processor.py  test_tkinter_gui_controller.py
