[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_util"
version = "0.1.0"
description = "Global hotkey-driven text-to-speech macro utility for accessibility and productivity."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "John Paul Guzman", email = "guzmanjps@gmail.com" }
]
maintainers = [
    { name = "John Paul Guzman", email = "guzmanjps@gmail.com" }
]
keywords = [
    "tts",
    "text-to-speech",
    "accessibility",
    "hotkeys",
    "macro",
    "gui",
    "pyttsx3",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Text-to-Speech",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Topic :: Accessibility"
]
dependencies = [
    "pynput>=1.7",
    "pyperclip>=1.8",
    "pyttsx3>=2.90",
    "pysbd>=0.3",
]

[project.urls]
Homepage = "https://github.com/johnpaulguzman/tts_util"
Documentation = "https://github.com/johnpaulguzman/tts_util/blob/main/README.md"
Repository = "https://github.com/johnpaulguzman/tts_util.git"
Issues = "https://github.com/johnpaulguzman/tts_util/issues"
Changelog = "https://github.com/johnpaulguzman/tts_util/blob/main/CHANGELOG.md"

[project.scripts]
ttsu = "tts_util.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=24.0",
]

[tool.black]
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/tts_util --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
